syntax = "proto3";
// todo: since the key and value size are fixed, true using fixed-length elements
// eg. u64
// todo: return error message
message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    bool success = 1;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
    bool success = 1;
}

message ScanRequest {
    uint64 cursor = 1;
}

message ScanResponse {
    uint64 cursor = 1;
    repeated bytes result = 2;
}

service MiniKVServer {
    rpc Get (GetRequest) returns (GetResponse) {
    }
    rpc Put (PutRequest) returns (PutResponse) {
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
    rpc Scan (ScanRequest) returns (ScanResponse) {
    }
}